Added language based search support
